Claude/explain codebase mlr0lw4xbed0qh55 vvw i7 (#3)
* chore: fix npm scope from @datasynx-ai to @datasynx

Published as @datasynx/agentic-ai-catograph@0.1.0 on npmjs.com

https://claude.ai/code/session_01FRGgsWhePcmvaBS8gXvLi2

* refactor: rename cartograph → cartography throughout codebase

- npm package: @datasynx/agentic-ai-cartography
- CLI binary: cartography
- Classes: CartographyDB, CartographyConfig, CartographyTools
- Env vars: CARTOGRAPHY_DAEMON, CARTOGRAPHY_CONFIG
- MCP server: mcp__cartography__*
- Published @datasynx/agentic-ai-cartography@0.1.0 to npmjs.com

https://claude.ai/code/session_01FRGgsWhePcmvaBS8gXvLi2

* fix: remove @anthropic-ai/claude-code from dependencies + add doctor command

- Move claude-code from dependencies → peerDependencies (optional, >=1.0.0 <2.0.0)
  This eliminates all vulnerability warnings when users run npm i
- Add claude-code ^1.0.128 to devDependencies for TypeScript type-checking
- Add `cartography doctor` command: checks Node version, Claude CLI,
  authentication (API key or OAuth), optional tools (docker/kubectl/ss),
  and ~/.cartography data directory
- Bump to v0.1.2

https://claude.ai/code/session_01FRGgsWhePcmvaBS8gXvLi2

* feat: rename binary to datasynx-cartography + welcome screen

- Binary: cartography → datasynx-cartography
- Welcome banner (ASCII art + version) shows on every invocation
- Full command overview when running without arguments
- Quick Start section with example commands
- Updated all CLI references (help texts, daemon spawn, client)
- Published as @datasynx/agentic-ai-cartography@0.1.3

https://claude.ai/code/session_01FRGgsWhePcmvaBS8gXvLi2

* fix: restore @anthropic-ai/claude-code v1.0.128 as runtime dependency

The SDK exports (query, tool, createSdkMcpServer) are needed at runtime
for discover/shadow commands. Pinned to exact v1.0.128 to avoid v2.x
which removed these exports.

https://claude.ai/code/session_01FRGgsWhePcmvaBS8gXvLi2

* feat: rich live logging for discovery mode

- Agent em

--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
   "name": "@datasynx/agentic-ai-cartography",
-  "version": "0.1.0",
+  "version": "0.2.3",
   "description": "AI-powered infrastructure cartography & SOP generation CLI — built on Claude Agent SDK",
   "type": "module",
-  "bin": { "cartography": "./dist/cli.js" },
-  "exports": { ".": { "import": "./dist/index.js", "types": "./dist/index.d.ts" } },
-  "files": ["dist", "README.md", "LICENSE"],
+  "bin": {
+    "datasynx-cartography": "./dist/cli.js"
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "build": "tsup",
     "dev": "tsx src/cli.ts",
@@ -13,29 +24,39 @@
     "test:watch": "vitest",
     "lint": "tsc --noEmit",
     "prepublishOnly": "npm run lint && npm run test && npm run build",
-    "postinstall": "node -e \"try{require('child_process').execSync('claude --version',{stdio:'pipe'})}catch{console.warn('\\n⚠ cartography requires Claude CLI: npm i -g @anthropic-ai/claude-code\\n')}\""
+    "postinstall": "node -e \"try{require('child_process').execSync('claude --version',{stdio:'pipe'})}catch{console.warn('\\n⚠ datasynx-cartography requires Claude CLI: npm i -g @anthropic-ai/claude-code\\n')}\""
   },
-  "engines": { "node": ">=18.0.0" },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "keywords": [
-    "infrastructure", "cartography", "discovery", "sop",
-    "claude", "ai-agent", "devops", "mermaid", "backstage",
-    "network-topology", "observability"
+    "infrastructure",
+    "cartography",
+    "discovery",
+    "sop",
+    "claude",
+    "ai-agent",
+    "devops",
+    "mermaid",
+    "backstage",
+    "network-topology",
+    "observability"
   ],
   "author": {
     "name": "Datasynx AI",
-    "url": "https://github.com/datasynx-ai"
+    "url": "https://github.com/datasynx"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/datasynx-ai/agentic-ai-discovery.git"
+    "url": "https://github.com/datasynx/agentic-ai-cartography.git"
   },
-  "homepage": "https://github.com/datasynx-ai/agentic-ai-discovery#readme",
+  "homepage": "https://github.com/datasynx/agentic-ai-cartography#readme",
   "bugs": {
-    "url": "https://github.com/datasynx-ai/agentic-ai-discovery/issues"
+    "url": "https://github.com/datasynx/agentic-ai-cartography/issues"
   },
   "license": "MIT",
   "dependencies": {
-    "@anthropic-ai/claude-code": "^1.0.0",
+    "@anthropic-ai/claude-code": "1.0.128",
     "@anthropic-ai/sdk": "^0.74.0",
     "better-sqlite3": "^12.6.0",
     "commander": "^12.1.0",
